build/log/idf_py_stderr_output_15733
Command: make -j 14 all
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.c: In function 'dsp_process':
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.c:80:36: error: 'temp' undeclared (first use in this function)
   80 |       input[i << 1] = saturate_q15(temp >> 15);                            // Back to Q15 and saturate to 16-bit
      |                                    ^~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.c:80:36: note: each undeclared identifier is reported only once for each function it appears in
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:180: esp-idf/main/CMakeFiles/__idf_main.dir/process.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6398: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:130: all] Error 2
